Sources/SwiftSDK/Persistence/Local/Grammar/WhereClauseGrammar/WhereClauseGrammarParser.swift
// Generated from WhereClauseGrammar.g4 by ANTLR 4.7.1

/**
 * WARNING! Generated code using ANTLR4 Idea Plugin
 *
 * Steps to build:
 * 1. Right-click on WhereClauseGrammar.g4 and select "Configure ANTLR"
 * 2. Set output directory to <project>/src/main/java
 *    Set package/namespace to "com.backendless.services.persistence.parser.gen"
 *    Select generate parse tree visitor
 * 3. Press Ctrl+Shift+G to generate *.java files
 **/

open class WhereClauseGrammarParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = WhereClauseGrammarParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(WhereClauseGrammarParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, 
                 T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11, T__11 = 12, 
                 T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, AMP_SYMBOL = 17, 
                 AMPAMP_SYMBOL = 18, CARET_SYMBOL = 19, COMMA_SYMBOL = 20, 
                 DOT_SYMBOL = 21, COMMENT_SYMBOL = 22, CONTINUATION_SYMBOL = 23, 
                 EQ_SYMBOL = 24, GE_SYMBOL = 25, GT_SYMBOL = 26, LE_SYMBOL = 27, 
                 LT_SYMBOL = 28, MINUS_SYMBOL = 29, NE_SYMBOL = 30, PLUS_SYMBOL = 31, 
                 STAR_SYMBOL = 32, SLASH_SYMBOL = 33, PERCENT_SYMBOL = 34, 
                 LSQ_BRACKET = 35, RSQ_BRACKET = 36, SINGLE_QUOTE_SYMBOL = 37, 
                 LPAREN = 38, RPAREN = 39, AFTER = 40, AND = 41, AT = 42, 
                 BEFORE = 43, DISTANCE = 44, ESCAPE = 45, FALSE = 46, FT = 47, 
                 IN = 48, IS = 49, KM = 50, LATITUDE = 51, LIKE = 52, LONGITUDE = 53, 
                 M_WORD = 54, MI = 55, NOT = 56, NULL = 57, OR = 58, TRUE = 59, 
                 YD = 60, UNSIGNED_INTEGER = 61, APPROXIMATE_NUM_LIT = 62, 
                 CHAR_STRING = 63, DELIMITED_ID = 64, SPACES = 65, REGULAR_ID = 66, 
                 ZV = 67
	}

	public
	static let RULE_expression = 0, RULE_logical_and_expression = 1, RULE_negated_expression = 2, 
            RULE_relational_expression = 3, RULE_parenthed_expression = 4, 
            RULE_in_expression = 5, RULE_in_elements = 6, RULE_boolean_expression = 7, 
            RULE_arithmetic_comparison_expression = 8, RULE_string_expression = 9, 
            RULE_like_escape_part = 10, RULE_simple_string_expression = 11, 
            RULE_null_comparison_expression = 12, RULE_boolean_operator = 13, 
            RULE_datetime_expression = 14, RULE_datetime_operator = 15, 
            RULE_timestamp = 16, RULE_general_element = 17, RULE_inverse_relation = 18, 
            RULE_geo_expression = 19, RULE_distance_func = 20, RULE_distance_arg = 21, 
            RULE_units_function = 22, RULE_arithmetic_expression = 23, RULE_arithmetic_primary = 24, 
            RULE_arithmetic_unary = 25, RULE_functions_returning_numerics = 26, 
            RULE_functions_returning_strings = 27, RULE_aggregate_expression = 28, 
            RULE_string_primary = 29, RULE_numeric = 30, RULE_quoted_string = 31, 
            RULE_like_quoted_string = 32, RULE_comparison_operator = 33, 
            RULE_id_expression = 34, RULE_regular_id = 35

	public
	static let ruleNames: [String] = [
		"expression", "logical_and_expression", "negated_expression", "relational_expression", 
		"parenthed_expression", "in_expression", "in_elements", "boolean_expression", 
		"arithmetic_comparison_expression", "string_expression", "like_escape_part", 
		"simple_string_expression", "null_comparison_expression", "boolean_operator", 
		"datetime_expression", "datetime_operator", "timestamp", "general_element", 
		"inverse_relation", "geo_expression", "distance_func", "distance_arg", 
		"units_function", "arithmetic_expression", "arithmetic_primary", "arithmetic_unary", 
		"functions_returning_numerics", "functions_returning_strings", "aggregate_expression", 
		"string_primary", "numeric", "quoted_string", "like_quoted_string", "comparison_operator", 
		"id_expression", "regular_id"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'LENGTH'", "'LOCATE'", "'ABS'", "'SQRT'", "'MOD'", "'CONCAT'", "'SUBSTRING'", 
		"'TRIM'", "'LOWER'", "'UPPER'", "'AVG'", "'MAX'", "'MIN'", "'SUM'", "'DISTINCT'", 
		"'COUNT'", "'&'", "'&&'", "'^'", "','", "'.'", "'--'", nil, "'='", nil, 
		"'>'", nil, "'<'", "'-'", nil, "'+'", "'*'", "'/'", "'%'", "'['", "']'", 
		"'''", "'('", "')'", nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 
		nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 
		nil, nil, nil, "'@!'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 
		nil, nil, nil, "AMP_SYMBOL", "AMPAMP_SYMBOL", "CARET_SYMBOL", "COMMA_SYMBOL", 
		"DOT_SYMBOL", "COMMENT_SYMBOL", "CONTINUATION_SYMBOL", "EQ_SYMBOL", "GE_SYMBOL", 
		"GT_SYMBOL", "LE_SYMBOL", "LT_SYMBOL", "MINUS_SYMBOL", "NE_SYMBOL", "PLUS_SYMBOL", 
		"STAR_SYMBOL", "SLASH_SYMBOL", "PERCENT_SYMBOL", "LSQ_BRACKET", "RSQ_BRACKET", 
		"SINGLE_QUOTE_SYMBOL", "LPAREN", "RPAREN", "AFTER", "AND", "AT", "BEFORE", 
		"DISTANCE", "ESCAPE", "FALSE", "FT", "IN", "IS", "KM", "LATITUDE", "LIKE", 
		"LONGITUDE", "M_WORD", "MI", "NOT", "NULL", "OR", "TRUE", "YD", "UNSIGNED_INTEGER", 
		"APPROXIMATE_NUM_LIT", "CHAR_STRING", "DELIMITED_ID", "SPACES", "REGULAR_ID", 
		"ZV"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "WhereClauseGrammar.g4" }

	override open
	func getRuleNames() -> [String] { return WhereClauseGrammarParser.ruleNames }

	override open
	func getSerializedATN() -> String { return WhereClauseGrammarParser._serializedATN }

	override open
	func getATN() -> ATN { return WhereClauseGrammarParser._ATN }

	override open
	func getVocabulary() -> Vocabulary {
	    return WhereClauseGrammarParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,WhereClauseGrammarParser._ATN,WhereClauseGrammarParser._decisionToDFA, WhereClauseGrammarParser._sharedContextCache)
	}

	public class ExpressionContext: ParserRuleContext {
			open
			func logical_and_expression() -> [Logical_and_expressionContext] {
				return getRuleContexts(Logical_and_expressionContext.self)
			}
			open
			func logical_and_expression(_ i: Int) -> Logical_and_expressionContext? {
				return getRuleContext(Logical_and_expressionContext.self, i)
			}
			open
			func OR() -> [TerminalNode] {
				return getTokens(WhereClauseGrammarParser.Tokens.OR.rawValue)
			}
			open
			func OR(_ i:Int) -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.OR.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return WhereClauseGrammarParser.RULE_expression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.enterExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.exitExpression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WhereClauseGrammarVisitor {
			    return visitor.visitExpression(self)
			}
			else if let visitor = visitor as? WhereClauseGrammarBaseVisitor {
			    return visitor.visitExpression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func expression() throws -> ExpressionContext {
		var _localctx: ExpressionContext = ExpressionContext(_ctx, getState())
		try enterRule(_localctx, 0, WhereClauseGrammarParser.RULE_expression)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(72)
		 	try logical_and_expression()
		 	setState(77)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == WhereClauseGrammarParser.Tokens.OR.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(73)
		 		try match(WhereClauseGrammarParser.Tokens.OR.rawValue)
		 		setState(74)
		 		try logical_and_expression()


		 		setState(79)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Logical_and_expressionContext: ParserRuleContext {
			open
			func negated_expression() -> [Negated_expressionContext] {
				return getRuleContexts(Negated_expressionContext.self)
			}
			open
			func negated_expression(_ i: Int) -> Negated_expressionContext? {
				return getRuleContext(Negated_expressionContext.self, i)
			}
			open
			func AND() -> [TerminalNode] {
				return getTokens(WhereClauseGrammarParser.Tokens.AND.rawValue)
			}
			open
			func AND(_ i:Int) -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.AND.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return WhereClauseGrammarParser.RULE_logical_and_expression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.enterLogical_and_expression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.exitLogical_and_expression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WhereClauseGrammarVisitor {
			    return visitor.visitLogical_and_expression(self)
			}
			else if let visitor = visitor as? WhereClauseGrammarBaseVisitor {
			    return visitor.visitLogical_and_expression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func logical_and_expression() throws -> Logical_and_expressionContext {
		var _localctx: Logical_and_expressionContext = Logical_and_expressionContext(_ctx, getState())
		try enterRule(_localctx, 2, WhereClauseGrammarParser.RULE_logical_and_expression)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(80)
		 	try negated_expression()
		 	setState(85)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == WhereClauseGrammarParser.Tokens.AND.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(81)
		 		try match(WhereClauseGrammarParser.Tokens.AND.rawValue)
		 		setState(82)
		 		try negated_expression()


		 		setState(87)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Negated_expressionContext: ParserRuleContext {
			open
			func NOT() -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.NOT.rawValue, 0)
			}
			open
			func negated_expression() -> Negated_expressionContext? {
				return getRuleContext(Negated_expressionContext.self, 0)
			}
			open
			func relational_expression() -> Relational_expressionContext? {
				return getRuleContext(Relational_expressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return WhereClauseGrammarParser.RULE_negated_expression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.enterNegated_expression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.exitNegated_expression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WhereClauseGrammarVisitor {
			    return visitor.visitNegated_expression(self)
			}
			else if let visitor = visitor as? WhereClauseGrammarBaseVisitor {
			    return visitor.visitNegated_expression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func negated_expression() throws -> Negated_expressionContext {
		var _localctx: Negated_expressionContext = Negated_expressionContext(_ctx, getState())
		try enterRule(_localctx, 4, WhereClauseGrammarParser.RULE_negated_expression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(91)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,2, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(88)
		 		try match(WhereClauseGrammarParser.Tokens.NOT.rawValue)
		 		setState(89)
		 		try negated_expression()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(90)
		 		try relational_expression()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Relational_expressionContext: ParserRuleContext {
			open
			func in_expression() -> In_expressionContext? {
				return getRuleContext(In_expressionContext.self, 0)
			}
			open
			func geo_expression() -> Geo_expressionContext? {
				return getRuleContext(Geo_expressionContext.self, 0)
			}
			open
			func boolean_expression() -> Boolean_expressionContext? {
				return getRuleContext(Boolean_expressionContext.self, 0)
			}
			open
			func null_comparison_expression() -> Null_comparison_expressionContext? {
				return getRuleContext(Null_comparison_expressionContext.self, 0)
			}
			open
			func string_expression() -> String_expressionContext? {
				return getRuleContext(String_expressionContext.self, 0)
			}
			open
			func arithmetic_comparison_expression() -> Arithmetic_comparison_expressionContext? {
				return getRuleContext(Arithmetic_comparison_expressionContext.self, 0)
			}
			open
			func datetime_expression() -> Datetime_expressionContext? {
				return getRuleContext(Datetime_expressionContext.self, 0)
			}
			open
			func parenthed_expression() -> Parenthed_expressionContext? {
				return getRuleContext(Parenthed_expressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return WhereClauseGrammarParser.RULE_relational_expression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.enterRelational_expression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.exitRelational_expression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WhereClauseGrammarVisitor {
			    return visitor.visitRelational_expression(self)
			}
			else if let visitor = visitor as? WhereClauseGrammarBaseVisitor {
			    return visitor.visitRelational_expression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func relational_expression() throws -> Relational_expressionContext {
		var _localctx: Relational_expressionContext = Relational_expressionContext(_ctx, getState())
		try enterRule(_localctx, 6, WhereClauseGrammarParser.RULE_relational_expression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(101)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,3, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(93)
		 		try in_expression()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(94)
		 		try geo_expression()

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(95)
		 		try boolean_expression()

		 		break
		 	case 4:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(96)
		 		try null_comparison_expression()

		 		break
		 	case 5:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(97)
		 		try string_expression()

		 		break
		 	case 6:
		 		try enterOuterAlt(_localctx, 6)
		 		setState(98)
		 		try arithmetic_comparison_expression()

		 		break
		 	case 7:
		 		try enterOuterAlt(_localctx, 7)
		 		setState(99)
		 		try datetime_expression()

		 		break
		 	case 8:
		 		try enterOuterAlt(_localctx, 8)
		 		setState(100)
		 		try parenthed_expression()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Parenthed_expressionContext: ParserRuleContext {
			open
			func LPAREN() -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.RPAREN.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return WhereClauseGrammarParser.RULE_parenthed_expression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.enterParenthed_expression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.exitParenthed_expression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WhereClauseGrammarVisitor {
			    return visitor.visitParenthed_expression(self)
			}
			else if let visitor = visitor as? WhereClauseGrammarBaseVisitor {
			    return visitor.visitParenthed_expression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func parenthed_expression() throws -> Parenthed_expressionContext {
		var _localctx: Parenthed_expressionContext = Parenthed_expressionContext(_ctx, getState())
		try enterRule(_localctx, 8, WhereClauseGrammarParser.RULE_parenthed_expression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(103)
		 	try match(WhereClauseGrammarParser.Tokens.LPAREN.rawValue)
		 	setState(104)
		 	try expression()
		 	setState(105)
		 	try match(WhereClauseGrammarParser.Tokens.RPAREN.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class In_expressionContext: ParserRuleContext {
			open
			func general_element() -> General_elementContext? {
				return getRuleContext(General_elementContext.self, 0)
			}
			open
			func IN() -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.IN.rawValue, 0)
			}
			open
			func LPAREN() -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func in_elements() -> In_elementsContext? {
				return getRuleContext(In_elementsContext.self, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func NOT() -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.NOT.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return WhereClauseGrammarParser.RULE_in_expression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.enterIn_expression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.exitIn_expression(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WhereClauseGrammarVisitor {
			    return visitor.visitIn_expression(self)
			}
			else if let visitor = visitor as? WhereClauseGrammarBaseVisitor {
			    return visitor.visitIn_expression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func in_expression() throws -> In_expressionContext {
		var _localctx: In_expressionContext = In_expressionContext(_ctx, getState())
		try enterRule(_localctx, 10, WhereClauseGrammarParser.RULE_in_expression)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(107)
		 	try general_element()

		 	setState(109)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == WhereClauseGrammarParser.Tokens.NOT.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(108)
		 		try match(WhereClauseGrammarParser.Tokens.NOT.rawValue)

		 	}

		 	setState(111)
		 	try match(WhereClauseGrammarParser.Tokens.IN.rawValue)
		 	setState(112)
		 	try match(WhereClauseGrammarParser.Tokens.LPAREN.rawValue)
		 	setState(113)
		 	try in_elements()
		 	setState(114)
		 	try match(WhereClauseGrammarParser.Tokens.RPAREN.rawValue)



		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class In_elementsContext: ParserRuleContext {
			open
			func quoted_string() -> [Quoted_stringContext] {
				return getRuleContexts(Quoted_stringContext.self)
			}
			open
			func quoted_string(_ i: Int) -> Quoted_stringContext? {
				return getRuleContext(Quoted_stringContext.self, i)
			}
			open
			func numeric() -> [NumericContext] {
				return getRuleContexts(NumericContext.self)
			}
			open
			func numeric(_ i: Int) -> NumericContext? {
				return getRuleContext(NumericContext.self, i)
			}
			open
			func COMMA_SYMBOL() -> [TerminalNode] {
				return getTokens(WhereClauseGrammarParser.Tokens.COMMA_SYMBOL.rawValue)
			}
			open
			func COMMA_SYMBOL(_ i:Int) -> TerminalNode? {
				return getToken(WhereClauseGrammarParser.Tokens.COMMA_SYMBOL.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return WhereClauseGrammarParser.RULE_in_elements
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.enterIn_elements(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WhereClauseGrammarListener {
				listener.exitIn_elements(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WhereClauseGrammarVisitor {
			    return visitor.visitIn_elements(self)
			}
			else if let visitor = visitor as? WhereClauseGrammarBaseVisitor {
			    return visitor.visitIn_elements(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func in_elements() throws -> In_elementsContext {
		var _localctx: In_elementsContext = In_elementsContext(_ctx, getState())
		try enterRule(_localctx, 12, WhereClauseGrammarParser.RULE_in_elements)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(118)
		 	try _errHandler.sync(self)
		 	switch (WhereClauseGrammarParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .CHAR_STRING:
		 		setState(116)
		 		try quoted_string()

		 		break
		 	case .UNSIGNED_INTEGER:fallthrough
		 	case .APPROXIMATE_NUM_LIT:
		 		setState(117)
		 		try numeric()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		 	setState(127)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == WhereClauseGrammarParser.Tokens.COMMA_SYMBOL.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(120)
		 		try match(WhereClauseGrammarParser.Tokens.COMMA_SYMBOL.rawValue)
		 		setState(123)
		 		try _errHandler.sync(self)
		 		switch (WhereClauseGrammarParser.Tokens(rawValue: try _input.LA(1))!) {
		 		case .CHAR_STRING:
		 			setState(121)
		 			try quoted_string()

		 			break
		 		case .UNSIGNED_INTEGER:fallthrough
		 		case .APPROXIMATE_NUM_LIT:
		 			setState(122)
		 			try numeric()

		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}


		 		setState(129)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
